<resources>
    <string name="app_name">泰彩彩票</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="body1">body1</string>
    <string name="title_bar_left_text">title bar left </string>
    <string name="title_bar_right_text">right</string>
    <string name="title_bar_right_middle">middle</string>
    <string name="CHARSET">UTF-8</string>
    <string name="zwl_register_title">注册泰彩彩票</string>
    <string name="zwl_text_verify">获取验证码</string>
    <string name="is_positive">确 定</string>
    <string name="zwl_register_hint">请输入您的手机号码：</string>
    <string name="register_gain_validation">获 取 验 证 码</string>
    <string name="register_gain_validation0">随后验证</string>
    <string name="register_i_have_verify">已有验证码</string>
    <string name="register_gain_validation1">验证手机号：\n1.有利于保护账户的安全\n2.用于账户密码的找回\n3.有利于我们为您提供更好的服务\n4.如果现在不验证，请务必保证输入的手机号码的正确性\n5.您可以在用户中心中对手机号码进行验证！</string>
    <string name="register_gain_validation2">验证手机号: 有利于保护账户的安全，  同时还有利于我们为您提供更好的服务。   您可以在用户中心对此手机号码再次的验证！</string>
    <string name="register_next3_text">账户密码一定要牢记,请不要告诉别人！\n建议您使用数字与字母的组合。\n\n何时会用到账户密码？\n 1、用户登录时\n 2、投注订单支付时\n 3、现金提取时</string>
    <string name="register_agree_text">我同意并接受【 泰彩彩票服务条款】</string>
    <string name="register_Toast_text">请输入正确的手机号码</string>
    <string name="register_show_text1">您会收到一条带有验证码的短信,请输入验证码</string>
    <string name="register_show2_text1">您的账号为：</string>
    <string name="register_show2_text2">-----------</string>
    <string name="register_show2_text3">提交验证码</string>
    <string name="register_show2_text4">没有收到？</string>
    <string name="register_show2_text5">重新发送</string>
    <string name="register_show2_text6">请输入手机收到的验证码</string>
    <string name="register_show3_text1">请输入至少6位账户密码</string>
    <string name="register_show3_text2">请再次输入至少6位账户密码</string>
    <string name="register_show3_text3">确认注册</string>
    <string name="register_show3_text4_4">随便转转</string>
    <string name="register_show3_text4">请输入当前账户的原密码</string>
    <string name="register_show4_text1">恭喜您，您的手机号:</string>
    <string name="register_show4_text2">立即验证</string>
    <string name="register_show4_text3">继续我的订单</string>
    <string name="register_show4_text5">去夺宝摩天轮碰碰运气吧！</string>
    <string name="register_show4_text6">马上购彩</string>
    <string name="register_show4_text7">模拟购彩10元红包已经到您的账号中,请查收!</string>
    <string name="register_show4_text8">为了您的账号安全，防止被盗，建议您立即验证！</string>
    <string name="register_show_Toast">您同意了泰彩服务条约!</string>
    <string name="register_show_Toast0">您的手机号码有误!</string>
    <string name="register_show_Toast1">您还没有同意泰彩服务条约!</string>
    <string name="register_show_Toast2">请求失败，请重新点击获取验证码！</string>
    <string name="register_show_Toast3">您的6位验证码有误!</string>
    <string name="register_show_Toast4">正在提交...</string>
    <string name="register_show_Toast5">已发送</string>
    <string name="register_show_Toast6">手机号码不能为空！</string>
    <string name="register_show_Toast7">密码不能为空！</string>
    <string name="register_show_Toast8">两次输入密码不一致！</string>
    <string name="register_show_Toast9">发送失败！</string>
    <string name="register_show1_Toast1">验证码不能为空！</string>
    <string name="play_bothball_item_1_4">共0注0元</string>
    <string name="play_bothball_item_1_5">清空</string>
    <string name="net_setting_toast">网络环境异常，请检查网络</string>
    <string name="any9_chbx_text">显示本站投注比例</string>
    <string name="any9_time_text">距截止：10小时6分</string>
    <string name="any9_sharek_reight_text">竞猜任意9场的比赛结果</string>
    <string name="any9_sharek_reight_text1">巴伦西</string>
    <string name="any9_sharek_reight_text2">vs</string>
    <string name="any9_sharek_reight_text3">奥格斯</string>
    <string name="any9_sharek_reight_text4">主队</string>
    <string name="any9_sharek_reight_text5">客队</string>
    <string name="bet_btn_oneselftext">自选号码</string>
    <string name="bet_btn_addcompetition">编辑 / 添加赛事</string>
    <string name="bet_btn_machinetext">机选 1 注</string>
    <string name="bet_btn_cleartext">清空列表</string>
    <string name="bet_tv_text1">您尚未选择任何投注号码\n  机选一注试试手气？</string>
    <string name="bet_tv_fstext1">您尚未选择过关方式</string>
    <string name="bet_tv_text2">我已阅读并同意《委托投注规则》</string>
    <string name="bet_tv_successionText">连续买</string>
    <string name="bet_tv_upText">收起</string>
    <string name="bet_tv">追</string>
    <string name="bet_tv_expectText">期</string>
    <string name="bet_tv_castText">投</string>
    <string name="bet_tv_againText">倍</string>
    <string name="bet_tv_payText">付   款</string>
    <string name="bet_tv_znzhText">智能追号</string>
    <string name="bet_optimize_text">奖金优化</string>
    <string name="bet_tv_huifu">恢复默认</string>
     <string name="bet_tv_resultText">0注0元</string>
     <string name="bet_gain_reward_stop_checkBox">中奖后停止追号</string>
     <string name="bet_zj_checkBox">追加投注</string>
     <string name="bet_pursue_monuth_tv">追一个月\n 14期</string>
     <string name="bet_pursue_monuth_tv1">追三个月\n 40期</string>
     <string name="bet_pursue_monuth_tv2">最大\n155期</string>
     <string name="bet_Ssp_gv_tv">清 空</string>
     <string name="bet_Ssp_towed_tv0">至少选择6个红球一个蓝球</string>
     <string name="bet_Ssp_towed_tv">胆码区 - 红球  至少选择1个,最多选择5个</string>
     <string name="bet_Ssp_towed_tv_1">拖码区 - 红球  至少选择2个</string>
     <string name="bet_Ssp_towed_tv_2">蓝球区,至少选择1个</string>
     <string name="bet_Ssp_towed_tv_3">普通投注</string>
     <string name="bet_Ssp_towed_tv_4">胆拖投注</string>
     <string name="bet_hsmsg_tv">获取开奖记录失败</string>
     <string name="bet_hsmsg_btn">重         试</string>
       <string name="zn_hint_1_ed">1</string>
       <string name="zn_hint_2_ed">2</string>
       <string name="zn_hint_10_ed">10</string>
    <string name="title_nav_tv_text">购彩大厅</string>
    <string name="title_jczq_text">竞彩足球投注</string>
    <string name="bottom_nav_tv_custom_text">我的定制</string>
    <string name="bottom_nav_tv_hall_text">购彩大厅</string>
    <string name="bottom_nav_tv_award_text">开奖信息</string>
    <string name="bottom_nav_tv_user_text">我</string>
    <string name="title_nav_custom">泰彩彩票</string>
    <string name="title_nav_hall">购彩大厅</string>
    <string name="title_nav_award">开奖信息</string>
    <string name="title_nav_user">我</string>
    <string name="title_nav_user_center">用户中心</string>
    <string name="title_nav_find">发现</string>
    <string name="dialog_title_ssq">双色球</string>
    <string name="dialog_btn1_ssq">添加双色球到我的定制</string>
    <string name="dialog_btn2_ssq">发送双色球到我的桌面</string>
    <string name="dialog_btn_move_down">下移</string>
    <string name="dialog_btn_move_up">上移</string>
    <string name="dialog_btn_remove">移除此应用</string>
    <string name="dialog_tv_bind_number_text">您的手机尚未通过验证,为了账号安全,请立即去验证!</string>
    <string name="dialog_tv_exit_confir_text">您确认退出泰彩彩票?</string>
    <string name="dialog_tv_exit_title_text">退出泰彩彩票</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_btn_name_baocun">个性签名</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_title_tc">泰彩彩票</string>
    <string name="dialog_title_ver_phonenumber">手机号码验证</string>
    <string name="dialog_tv_ver_phonenumber_text">恭喜您,手机号码验证成功！您的账户将会更加安全！</string>
    <string name="dialog_tv_ver_success_return_text">恭喜您,您的账户密码已成功找回！</string>
    <string name="dialog_tv_ver_update_success_text">恭喜您,您的账户密码已修改成功！</string>
    <string name="dialog_btn_start">开始</string>
    <string name="dialog_tv_sell_apply_text">销代审核请需要您进一步完善个人相关信息！</string>
    <string name="dialog_title_sell_apply">销代申请</string>
    <string name="dialog_tv_apply_success_text">恭喜您，销代审核通过！请关注您的手机短信或系统消息！</string>
    <string name="dialog_tv_del_bankcard_text">您确认要删除此张银行卡吗?</string>
    <string name="dialog_title_check_newversion">检测新版本</string>
    <string name="dialog_tv_check_version_text">当前已是最新版本啦！</string>
    <string name="dialog_btn_close">关闭</string>
    <string name="dialog_title_loginout">退出登录</string>
    <string name="dialog_tv_logonout_text">确定退出登录吗?</string>
    <string name="dialog_title_find_newversion">发现新版本</string>
    <string name="dialog_btn_download">下载</string>
    <string name="dialog_to_check">立即验证</string>
    <string name="dialog_to_jump">跳过</string>
    <string name="dialog_ok">原 来 如 此</string>
    <string name="dialog_help">什么是中奖后停止追号?</string>
    <string name="dg_title_text">系统消息</string>
    <string name="dialog_help_text">\t勾选后,当您的追号方案某一期中奖,则后续的追号订单将被撤销,资金返还到您的账户中.如不勾选,系统一直帮你购买所有的追号投注订单.</string>
    <string name="pop_menu_tv_text">菜单项文字描述</string>
    <string name="pop_menu_tv_award">开奖信息</string>
    <string name="pop_menu_tv_play_method">玩法介绍</string>
    <string name="pop_menu_tv_custom">收录到我的定制</string>
    <string name="item_hall_kaijiang">今日开奖</string>
    <string name="item_hall_jiajiang">加奖</string>
    <string name="item_hall_tv_issue_text">距ISSUE期截止 TIME</string>
    <string name="reminder_text">验证手机号：有利于保护账号的安全,同时还有利于我们为您提供更好的服务.</string>
    <string name="checkbox_text">系统已向您的手机发送一条带有6位验证码的短\n信,请输入验证码！</string>
    <string name="affirm_alter_text">确  认  修  改</string>
    <string name="zwl_payment_String_1_1">支付项目：</string>
    <string name="zwl_payment_String_1_2">订单金额：</string>
    <string name="zwl_payment_String_1_3">¥ </string>
    <string name="zwl_payment_String_1_4">****第******期</string>
    <string name="zwl_payment_String_1_5">更多支付方式</string>
    <string name="zwl_payment_String_1_6">支付宝快捷支付</string>
    <string name="zwl_payment_String_1_7">确 认 付 款</string>
    <string name="zwl_payment_String_1_9">立即充值</string>
    <string name="zwl_payment_String_2_1">银联无卡支付</string>
    <string name="zwl_payment_String_2_2">银联语音支付</string>
    <string name="zwl_payment_String_2_3">账户余额支付：  MONEY元</string>
    <string name="zwl_payment_String_2_4">账户：NUMBER</string>
    <string name="zwl_payment_String_2_5">红包支付,可用红包：¥ MONEY</string>
    <string name="zwl_payment_String_2_6">余额：¥ MONEY</string>
    <string name="zwl_payment_String_2_7">请输入使用红包的金额</string>
    <string name="zwl_payment_String_2_8">请输入账户密码</string>
    <string name="zwl_payment_String_2_9">使用其它方式支付剩余金额：MONEY元</string>
    <string name="zwl_payment_String_3_1">充值</string>
    <string name="zwl_payment_String_3_2">1</string>
    <string name="zwl_payment_String_3_3">忘记账户密码?</string>
    <string name="zwl_payment_String_3_4">银联卡支付</string>
    <string name="payment_czmsxf">充值免手续费</string>
    <string name="payment_showmsg">梅泰诺泰彩科技(北京)有限公司</string>
    <string name="payment_zxkf">在线客服</string>
    <string name="payment_phone_number">4000328666</string>
    <string name="payment_phone_number1">400&#8211;0328&#8211;666</string>
    <string name="zwl_dballcommon_tv_1">机选摇一摇</string>
    <string name="zwl_dballcommon_tv_2">至少选择6个红球和1个蓝球</string>
    <string name="zwl_dballcommon_tv_3">请选择至少1注</string>
    <string name="zwl_dballcommon_toast_1_1">您还需要选择 :</string>
    <string name="zwl_dballcommon_toast_1_2">个红球!</string>
    <string name="zwl_dballcommon_toast_1_3">您还需要选择一个蓝球!</string>
    <string name="zwl_dballcommon_toast_1_4">共</string>
    <string name="zwl_dballcommon_toast_1_5">注</string>
    <string name="zwl_dballcommon_toast_1_6">元</string>
   <string name="zwl_dballcommon_toast_1_7">胆码 </string>
    <string name="zwl_dballcommon_toast_1_8">拖码 </string>
    <string name="network_checking">网络诊断中</string>
    <string name="two_minute">诊断需要两分钟，在此期间您不可以进行其他操作</string>
    <string name="interrupt_check">但是您可以随时中断诊断</string>
    <string name="checking_router">正在检查路由器信息......</string>
     <string name="ob_yzcj">预测资金</string>
     <string name="ob_zsfb">注数分布</string>
     <string name="ob_dzzh">单注组合</string>
     <string name="ob_gg">过关</string>
</resources>