<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:padding="0dp"
	android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal" >
	<!-- 期号  -->
	   <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" 
		    android:gravity="center"
		    android:textSize="13sp"
		    android:layout_weight="1"
		    android:text="@string/ob_gg"
		    android:textColor="@color/award_info_tv_title_color"/>
	   <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" 
		    android:layout_weight="1"
		    android:gravity="center"
		    android:padding="0dp"
		    android:textSize="12sp"
		    style="@style/textaddFont"
		    android:text="@string/ob_dzzh"
		     android:textColor="@color/award_info_tv_title_color"
		    />
	   <!-- android:textColor="@color/login_color_2" -->
	   	   <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" 
		    android:gravity="center"
		    android:textSize="13sp"
		    android:layout_weight="1"
		    android:text="@string/ob_zsfb"
		    android:textColor="@color/award_info_tv_title_color"/>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center"
		    android:padding="0dp"
		    android:layout_weight="1"
		    android:textSize="12sp"
		    style="@style/textaddFont"
		    android:text="@string/ob_yzcj"
		    android:textColor="@color/award_info_tv_title_color"
		   />
		    <!-- android:textColor="@color/login_color_2" -->  
<!-- <View 
		    android:layout_width="fill_parent"
		    android:layout_height="0.5dip"
		    android:background="@color/view_line"
		    />
 --></LinearLayout>