<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/dialog_title_tv_color">
 <!-- 注册第二步 获取验证码 -->
     
  <RelativeLayout 
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     
     android:paddingBottom="10dip"
     android:paddingTop="14.0dp"
     android:paddingLeft="18.0dp"
     android:background="#FFFFFF">
       
    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_show2_text1"
        android:textSize="16sp"
        android:textColor="#000000"/>
      
    <TextView
        android:id="@+id/zwl_show_phoneNumber_tv"     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:paddingLeft="104.0dp"
        android:paddingBottom="5.0dp"
        
        android:text="@string/register_show2_text2"
        android:textColor="@color/text_red" 
        android:layout_below="@id/tv_1"
        android:textSize="20sp"
        style="@style/textaddFont"/>
                 
    </RelativeLayout>
    
    <CheckBox
        android:id="@+id/msg_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="20.0dp"
        android:layout_marginLeft="21.0dp"
        android:drawablePadding="5.0dp"
        android:layout_below="@id/relativeLayout"
        android:drawableLeft="@drawable/sms"
     
        android:text="@string/register_show_text1"
        android:textColor="#999999"
        android:background="@null"
        android:button="@null"
        android:checked="true"
        
        android:textSize="12.0dp" />
     
 <RelativeLayout 
     android:id="@+id/relativeLayout0"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
     
     android:layout_marginTop="20.0dp"
     android:layout_marginRight="21.0dp"
    
     android:focusable="true" 
     android:focusableInTouchMode="true"
     android:layout_below="@id/msg_checkBox"
     android:layout_alignLeft="@id/msg_checkBox">
    
  
 <EditText
            android:id="@+id/zwl_verify_ed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_bg"
			android:padding="10dip"
            android:gravity="left"
           
            android:hint="@string/register_show2_text6"
            android:textColorHint="@color/award_info_tv_title_second_color"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="#000000"
            android:textSize="14.0sp" />

    <Button
        android:id="@+id/zwl_submit_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="20dip"
		android:padding="10dip"
        android:gravity="center_horizontal"
        
        android:layout_below="@id/zwl_verify_ed"
        android:background="@drawable/btn_bg_orange_selector"
        android:text="@string/register_show2_text3"
        android:textColor="@android:color/white"
        style="@style/textaddFont"
        android:textSize="16.0dp" />
    </RelativeLayout>
    
  <LinearLayout 
        android:id="@+id/lLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_alignLeft="@id/msg_checkBox"
        android:layout_marginRight="21.0dp"
        
        android:layout_below="@id/relativeLayout0" 
        android:orientation="horizontal" >
      <TextView
        android:id="@+id/without_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_show2_text4"
        android:textSize="14.0sp"
       
        android:layout_marginLeft="90.0dp"
        android:paddingTop="14dip"
        android:textColor="@color/award_info_tv_title_second_color"/>
 
    <RelativeLayout
       android:id="@+id/linearLayout"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       
       android:gravity="right|center_vertical">
          
      <TextView
        android:id="@+id/zwl_again_send_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginRight="5dip"
        android:paddingTop="13dip"
        
        android:text="@string/register_show2_text5"
        android:textColor="#007Aff" 
        android:textSize="14.0sp"
        android:lines="1"/>
     <TextView
        android:id="@+id/zwl_follow_verify_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:paddingTop="13dip"
        android:layout_toRightOf="@id/zwl_again_send_tv"
        android:text="@string/register_gain_validation0"
        android:textColor="@color/blue" 
        android:textSize="14sp"
        android:lines="1"/>
    </RelativeLayout>
  
</LinearLayout>



    <RelativeLayout
        android:id="@+id/Below_Rlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50.0dp"
        android:layout_marginLeft="10.0dp"
        android:layout_marginRight="10.0dp"
        android:layout_below="@id/lLayout">
	
	       <ImageView
	           android:id="@+id/img21"
	           android:layout_width="18dip"
	           android:layout_height="18dip"
	           
	           android:paddingTop="10.0dp"
	           android:paddingLeft="5.0dp"
	           android:paddingRight="5.0dp"
	           android:paddingBottom="1.0dp"
	           android:background="@drawable/character_emphasis"/>
	      <TextView 
	        android:id="@+id/reminder_Text_tv"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/img21"
	        android:lineSpacingMultiplier="1.2"
	       
	        android:paddingLeft="5.0dp"
	        android:paddingRight="10.0dp"
	        android:text="@string/register_gain_validation2"
	        android:textColor="#999999"
	        android:textSize="13sp"/>
     </RelativeLayout>
    
</RelativeLayout>

