<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
        <TextView
            android:id="@+id/dialog_help"
            android:drawablePadding="5dp"
            android:button="@null"
            style="@style/text_20_ffffff_bold"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:shadowColor="@color/title_nav_tv_shadow_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_help"
            android:background="@drawable/activity_main_title_nav_bg"
            android:enabled="false"/>
       <TextView
            android:id="@+id/dialog_help_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/award_info_tv_title_color"
            android:text="@string/dialog_help_text"
           />
       <Button
            android:id="@+id/help_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_bg_white_selector"
            style="@style/textaddFont"
            android:textSize="16.0dp" 
            android:textColor="@color/login_color_1"
            android:text="@string/dialog_ok">
       </Button>

</RelativeLayout>